--- a/deployment.yaml
+++ b/deployment.yaml
@@ -23,7 +23,7 @@ spec:
       - name: jfrogauth 
       containers:
       - name:  valaxy-rtp
-        image: valaxy02.jfrog.io/valaxy-docker-local/ttrend:2.0.2
+        image: valaxy02.jfrog.io/valaxy-docker-local/ttrend:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 8000
